# iris-client

./: .gitignore  __init__.py  client.py  models.py  pyproject.toml  pytest.ini  readme.md  requirements.txt
.github/workflows/: release-artifacts.yml  test.yml
iris_client/: __init__.py  client.py  models.py
tests/: conftest.py  test_client.py  test_import.py  test_models.py
tests/fixtures/: README.md
tests/fixtures/errors/: invalid_token_403.json
tests/fixtures/items/: item_code_response.json  item_code_update_response.json  item_create_response.json
tests/fixtures/orders/: order_create_response.json  order_items_response.json  order_response.json
tests/fixtures/slips/: slip_actual_update_response.json  slip_by_sku_response.json  slip_by_uuid_response.json  slip_create_response.json  slips_list_response.json
