[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "iris-client"
description = "Python client for the Iris API"
requires-python = ">=3.10"
license = { text = "MPL-2.0" }
dynamic = ["version"]
dependencies = [
    "httpx",
    "pydantic",
    "tenacity",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Repository = "https://github.com/wisepayru/iris-client"

[tool.setuptools.packages.find]
where = ["."]
include = ["iris_client*"]

[tool.setuptools_scm]
