[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "iris-client"
description = "Python client for the Iris API"
requires-python = ">=3.14"
license = { text = "MPL-2.0" }
dynamic = ["version"]
dependencies = [
    "httpx",
    "pydantic",
    "tenacity",
]

# Test dependencies live in requirements-test.txt (pinned, per #108):
#   pip install -e . -r requirements-test.txt

[project.urls]
Repository = "https://github.com/wisepayru/iris-client"

[tool.setuptools.packages.find]
where = ["."]
include = ["iris_client*"]

[tool.setuptools_scm]
